expose get events api